--- a/index.html
+++ b/index.html
@@ -51,6 +51,6 @@
   </nav>
 
   <!-- Roblx game iframe preserved -->
-  <iframe src="https://cloud.easyfun.gg/launch?app=roblox" allowfullscreen></iframe>
+  <iframe src="https://www.easyfun.gg/cloud-games/roblox.html" allowfullscreen></iframe>
 </body>
 </html>
